fable/test/syntax_error/bad_open_err_label.f
      program prog
      character name*4
      name = 'file'
      open(1, file=name, err=1.3)
      end
